# structKernelBench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench_utils.cpp  bench_utils.h  main.cpp
CSR-SpMV/: spmv_runner.cpp  spmv_runner.h
CSR-SpMV/CSR-SpMV/: baseline.h
CSR-SpMV/cuda/: cuda_kernel.cu  cuda_kernel.h
CSR-SpMV/docs/baseline/: v1.md
CSR-SpMV/docs/cuda/: v1.md
CSR-SpMV/docs/cusparse/: v1.md
CSR-SpMV/docs/openmp/: v1.md
CSR-SpMV/docs/simd/: v1.md
CSR-SpMV/kernels/: baseline.cpp  cusparse_kernel.cu  cusparse_kernel.h  openmp.h  simd.cpp
CSR-SpMV/openmp/: openmp.cpp
CSR-SpMV/simd/: simd.h
CSR-SpMV/ui/: BenchmarkPanel.cpp  BenchmarkPanel.h  ResultChartView.cpp
MaxStressEnvelope/: envelope_runner.cpp  envelope_runner.h
MaxStressEnvelope/docs/baseline/: v1.md
MaxStressEnvelope/docs/cub/: v1.md
MaxStressEnvelope/docs/cuda/: v1.md
MaxStressEnvelope/docs/openmp/: v1.md
MaxStressEnvelope/docs/simd/: v1.md
MaxStressEnvelope/kernels/: baseline.cpp  baseline.h  cub_kernel.cu  cub_kernel.h  cuda_kernel.cu  cuda_kernel.h  openmp.cpp  openmp.h  simd.cpp  simd.h  thrust_kernel.cu  thrust_kernel.h
VonMises/: vonmises_runner.cpp  vonmises_runner.h
VonMises/docs/baseline/: v1.md
VonMises/docs/cuda/: v1.md
VonMises/docs/openmp/: v1.md
VonMises/docs/simd/: v1.md
VonMises/docs/thrust/: v1.md
VonMises/kernels/: baseline.cpp  baseline.h  cuda_kernel.cu  cuda_kernel.h  openmp.cpp  openmp.h  simd.cpp  simd.h  thrust_kernel.cu  thrust_kernel.h
common/: main.cpp
docs/: backend_notes.qrc
ui/: BackendInfoDialog.cpp  BackendInfoDialog.h  BenchmarkPanel.cpp  BenchmarkPanel.h  EnvelopeMainWidget.cpp  EnvelopeMainWidget.h  MainWindow.cpp  MainWindow.h  ResultChartView.cpp  ResultChartView.h  SpmvMainWidget.cpp  SpmvMainWidget.h  VonMisesMainWidget.cpp  VonMisesMainWidget.h
